refactor: swagger and update user
